added online users list feature

--- a/public/index.html
+++ b/public/index.html
@@ -11,5 +11,19 @@
     <div id="content">
       <canvas id="canvas" width="800" height="500"></canvas>
     </div>
+    <div>
+      <ul id="onlineUsers">
+
+      </ul>
+    </div>
+    <div id="loginCover">
+      <div id="loginDiv">
+        <h1 style="text-align: center">Welcome!</h1><br />
+        <form action="" autocomplete="off" >
+          <label><input type="text" id="nick" placeholder="Your nick" maxlength="20" /></label><br />
+          <input type="submit" value="Start" />
+        </form>
+      </div>
+    </div>
   </body>
 </html>
