--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>My Whiteboard</title>
     <link rel="stylesheet" href="stylesheet.css">
-    <script src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="jquery.js"></script>
     <script type="text/javascript" src="script.js"></script>
   </head>
@@ -11,11 +11,23 @@
     <div id="content">
       <canvas id="canvas" width="800" height="500"></canvas>
     </div>
-    <div>
-      <ul id="onlineUsers">
+    <div id="toolbar">
+      <button id="line" class="active">
+        <svg width="26" height="26">
+          <line x1="13" y1="0" x2="13" y2="26" style="stroke:#000; stroke-width:1" />
+        </svg>
+      </button>
+      <button id="rect">
+        <svg width="26" height="26">
+          <rect width="26" height="26" style="fill:#eee; stroke:black" />
+        </svg>
+      </button>
 
-      </ul>
+      <button id="resetBtn">Reset</button>
     </div>
+
+    <ul id="onlineUsers"></ul>
+
     <div id="loginCover">
       <div id="loginDiv">
         <form action="" autocomplete="off" >
@@ -24,5 +36,6 @@
         </form>
       </div>
     </div>
+
   </body>
 </html>
